--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ docutils==0.14
 Flask==1.0.2
 Flask-Jsonpify==1.5.0
 Flask-RESTful==0.3.7
+gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
