--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Click==7.0
 cryptography==2.6.1
 docutils==0.14
 Flask==1.0.2
+Flask-Cors==3.0.7
 Flask-Jsonpify==1.5.0
 Flask-RESTful==0.3.7
 gunicorn==19.9.0
