--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ chardet==3.0.4
 Click==7.0
 cryptography==2.6.1
 docutils==0.14
+eventlet==0.24.1
 Flask==1.0.2
 Flask-Cors==3.0.7
 Flask-Jsonpify==1.5.0
